Fix last link pointing at specific version

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         svgExt: ".svg",
         source: {
           concatemoji:
-            "wp-includes\/js\/wp-emoji-release.min.js?ver=5202be6636d1ae8d454b04238e926ae1",
+            "wp-includes\/js\/wp-emoji-release.min.js",
         },
       };
       !(function (a, b, c) {
