Dopisanie kolejnej wygranej selfie

--- a/index.html
+++ b/index.html
@@ -522,7 +522,11 @@
                     Pierwsze miejsce na zawodach Carolo – Cup w Niemczech w roku
                     2021
                   </li>
-                  Powstały już 4 wersje pojazdu, aktualnie powstaje piąta.
+                  <li>
+                    Trzecie miejsce na zawodach Carolo – Cup w Niemczech w roku
+                    2022
+                  </li>
+                  Powstały już 4 iteracje pojazdu, aktualnie pracujemy nad piątą.
                 </p>
               </div>
             </div>
