--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                   czujników porusza się po torze symulującym rzeczywisty ruch
                   uliczny. Do sukcesów zespołu można zaliczyć:
                   <li>
-                    pierwsze miejsce na International Autonomous Robot
+                    Pierwsze miejsce na International Autonomous Robot
                     Racing Challenge 2018 w Kanadzie
                   </li>
                   <li>
