--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
     </footer>
     <script src="js/aos.js"></script>
     <script src="https://kit.fontawesome.com/2c477ec56b.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/scrolling.js"></script>
