Dodanie linka do Githuba

--- a/okon.html
+++ b/okon.html
@@ -97,6 +97,9 @@
                         <a href="https://www.linkedin.com/company/students-robotics-association-ko%C5%82o-naukowe-robotyk%C3%B3w-knr/mycompany/" class="footer__social-item">
                             <i class="fab fa-linkedin"></i>
                         </a>
+                        <a href="https://github.com/KNR-PW/" class="footer__social-item">
+                            <i class="fab fa-github"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="footer__block">
